fix(@clayui/css): Atlas Custom Radio don't use % for icon background-size. Chrome has trouble rendering it when whitespace is removed.
fixes #3722

--- a/packages/clay-css/src/scss/atlas/variables/_custom-forms.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_custom-forms.scss
@@ -114,7 +114,7 @@ $custom-checkbox-indicator-border-radius: 0.125rem !default; // 2px
 
 // Custom Radio
 
-$custom-radio-indicator-icon-checked-bg-size: 63% !default;
+$custom-radio-indicator-icon-checked-bg-size: 0.625rem !default;
 
 $custom-radio-indicator-disabled-border-color: $custom-control-indicator-disabled-bg !default;
 
